# doc/api.swagger.json
@@ -25,6 +25,12 @@
             "schema": {
               "$ref": "#/definitions/pbRemoveClientResponse"
             }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
           }
         },
         "parameters": [
@@ -47,6 +53,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbNewClientResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -79,6 +91,12 @@
             "schema": {
               "$ref": "#/definitions/pbResetClientResponse"
             }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
           }
         },
         "parameters": [
@@ -101,6 +119,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbNewClientKeyResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -135,6 +159,12 @@
             "schema": {
               "$ref": "#/definitions/pbRemoveTopicClientResponse"
             }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
           }
         },
         "parameters": [
@@ -163,6 +193,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbNewTopicClientResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -194,6 +230,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbGetTopicsForClientResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -234,6 +276,12 @@
             "schema": {
               "$ref": "#/definitions/pbCountTopicsForClientResponse"
             }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
           }
         },
         "parameters": [
@@ -258,6 +306,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbGetClientsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -292,6 +346,12 @@
             "schema": {
               "$ref": "#/definitions/pbCountClientsResponse"
             }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
           }
         },
         "tags": [
@@ -302,12 +362,18 @@
     "/e4/send-client-pubkey": {
       "post": {
         "summary": "Send a client pubkey to another client (pubkey mode only)",
-        "operationId": "SendClientPubkeyCommand",
+        "operationId": "SendClientPubKey",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pbSendClientPubkeyCommandResponse"
+              "$ref": "#/definitions/pbSendClientPubKeyResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -317,7 +383,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/pbSendClientPubkeyCommandRequest"
+              "$ref": "#/definitions/pbSendClientPubKeyRequest"
             }
           }
         ],
@@ -335,6 +401,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbRemoveTopicResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -358,6 +430,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbNewTopicResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -383,6 +461,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbGetClientsForTopicResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -423,6 +507,12 @@
             "schema": {
               "$ref": "#/definitions/pbCountClientsForTopicResponse"
             }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
           }
         },
         "parameters": [
@@ -447,6 +537,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbGetTopicsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -480,6 +576,12 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/pbCountTopicsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -650,7 +752,7 @@
     "pbResetClientResponse": {
       "type": "object"
     },
-    "pbSendClientPubkeyCommandRequest": {
+    "pbSendClientPubKeyRequest": {
       "type": "object",
       "properties": {
         "sourceClient": {
@@ -661,7 +763,7 @@
         }
       }
     },
-    "pbSendClientPubkeyCommandResponse": {
+    "pbSendClientPubKeyResponse": {
       "type": "object"
     },
     "protobufAny": {
@@ -678,6 +780,27 @@
         }
       },
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := ptypes.MarshalAny(foo)\n     ...\n     foo := \u0026pb.Foo{}\n     if err := ptypes.UnmarshalAny(any, foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
+    },
+    "runtimeError": {
+      "type": "object",
+      "properties": {
+        "error": {
+          "type": "string"
+        },
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "message": {
+          "type": "string"
+        },
+        "details": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protobufAny"
+          }
+        }
+      }
     },
     "runtimeStreamError": {
       "type": "object",
@@ -703,20 +826,6 @@
           }
         }
       }
-    }
-  },
-  "x-stream-definitions": {
-    "pbEvent": {
-      "type": "object",
-      "properties": {
-        "result": {
-          "$ref": "#/definitions/pbEvent"
-        },
-        "error": {
-          "$ref": "#/definitions/runtimeStreamError"
-        }
-      },
-      "title": "Stream result of pbEvent"
     }
   }
 }
